continuo pantalla Detalle Paciente

--- a/demo/src/main/resources/static/detalle/detalle.html
+++ b/demo/src/main/resources/static/detalle/detalle.html
@@ -71,7 +71,6 @@
                         <button id="trastorno-autista-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-autista-no" class="btn btn-choice mb-2">No</button>
                     </div>
-                    <div id="error-trastorno-autista" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
                     <h6 for="trastorno-comunicacion">Trastorno de la Comunicación en la Infancia</h6>
@@ -79,7 +78,6 @@
                         <button id="trastorno-comunicacion-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-comunicacion-no" class="btn btn-choice mb-2">No</button>
                     </div>
-                    <div id="error-trastorno-comunicacion" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
                     <h6 for="trastorno-esquizoafectivo">Trastorno Esquizoafectivo</h6>
@@ -87,7 +85,6 @@
                         <button id="trastorno-esquizoafectivo-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-esquizoafectivo-no" class="btn btn-choice mb-2">No</button>
                     </div>
-                    <div id="error-trastorno-esquizoafectivo" class="error-message-text"></div>
                 </div>
             </div>
             <div class="col-md-3 btn-bool">
@@ -97,7 +94,6 @@
                         <button id="trastorno-depresivo-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-depresivo-no" class="btn btn-choice mb-2">No</button>
                     </div>
-                    <div id="error-trastorno-depresivo" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
                     <h6 for="trastorno-bipolar">Trastorno Bipolar con Características Psicóticas</h6>
@@ -105,7 +101,6 @@
                         <button id="trastorno-bipolar-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="trastorno-bipolar-no" class="btn btn-choice mb-2">No</button>
                     </div>
-                    <div id="error-trastorno-bipolar" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
                     <h6 for="antecedentes-familiares">Antecedentes Familiares Psiquiátricos</h6>
@@ -113,18 +108,14 @@
                         <button id="antecedentes-familiares-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="antecedentes-familiares-no" class="btn btn-choice mb-2">No</button>
                     </div>
-                    <div id="error-antecedentes-familiares" class="error-message-text"></div>
                 </div>
             </div>
             <div id="detalle-sintomas-positivos-container"></div>
             <div id="detalle-sintomas-negativos-container"></div>
             <div id="detalle-complementarios-container"></div>
+            <div id="detalle-diagnostico-container"></div>
         </div>
 
-
-        <!-- region Popup -->
-        <div id="diagnostico-popup"></div>
-        <!-- endregion Popup -->
     </div>
     <div class="row" style="margin-top: -20px; margin-bottom: 50px;">
         <div class="btn-consultar-formulario">
