--- a/demo/src/main/resources/static/detalle/detalleComplementarios.html
+++ b/demo/src/main/resources/static/detalle/detalleComplementarios.html
@@ -33,9 +33,9 @@
             <div id="estudio-causa-natural-id" class="button-container opciones">
                 <h6 for="estudio-causa-natural">¿Causa orgánica?</h6>
                 <div class="btn-group">
-                    <button id="estudios-si" class="btn btn-choice">Sí</button>
-                    <button id="estudios-no" class="btn btn-choice">No</button>
-                    <button id="estudios-no" class="btn btn-choice">Inconcluso</button>
+                    <button id="estudios-causa-organica-si" class="btn btn-choice">Sí</button>
+                    <button id="estudios-causa-organica-no" class="btn btn-choice">No</button>
+                    <button id="estudios-causa-organica-inconcluso" class="btn btn-choice">Inconcluso</button>
                 </div>
             </div>
 
@@ -47,7 +47,7 @@
             <div id="estudio-comentario" class="margin-filas">
                 <h6 for="estudio-comentario">Comentario sobre el estudio</h6>
                 <!-- <input type="text" class="form-control" id="estudio-comentario" name="estudio-comentario"> -->
-                <textarea id="estudio-comentario" class="form-control" rows="4"
+                <textarea id="estudio-comentario-text" class="form-control textarea" rows="4"
                     placeholder="Comentarios sobre el estudio" style="pointer-events: none; opacity: 0.5;"></textarea>
             </div>
             <div id="image-container" class="image-container">
