uncheck valores únicos

--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -57,20 +57,20 @@
               <div  id="lenguaje" class="checkboxes">
                 <div class="form-control">
                   <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-sin-particularidades" onclick="unselect(value, name)"/>Sin particularidades</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-taquilalia"/>Taquilalia</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-verborragia"/>Verborragia</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-bradilalia"/>Bradilalia</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]"value="lenguaje-latencia"/>Latencia de respuesta</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-mutismo"/>Mutismo</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-musitaciones"/>Musitaciones</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-soliloquio"/>Soliloquio</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-neologismo"/>Neologismo</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-jergafasia"/>Jergafasia</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-ecolalia"/>Ecolalia</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-pararrespuesta"/>Pararrespuesta</label>
-                  <label id="check"><input type="checkbox"  name="lenguaje[]" value="lenguaje-estereotipia"/>Estereotipia verbal</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-verbigeracion"/>Verbigeracion</label>
-                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-homofonia"/>Asociación por homofonía</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-taquilalia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Taquilalia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-verborragia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Verborragia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-bradilalia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Bradilalia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]"value="lenguaje-latencia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Latencia de respuesta</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-mutismo" onclick="unselect(value, name)"/>Mutismo</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-musitaciones" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Musitaciones</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-soliloquio" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Soliloquio</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-neologismo" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Neologismo</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-jergafasia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Jergafasia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-ecolalia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Ecolalia</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-pararrespuesta" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Pararrespuesta</label>
+                  <label id="check"><input type="checkbox"  name="lenguaje[]" value="lenguaje-estereotipia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Estereotipia verbal</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-verbigeracion" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Verbigeracion</label>
+                  <label id="check"><input type="checkbox" name="lenguaje[]" value="lenguaje-homofonia" onclick="unselectUnicos('lenguaje-sin-particularidades,lenguaje-mutismo', name)"/>Asociación por homofonía</label>
                 </div>
               </div>
             </div>
