--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -110,9 +110,9 @@
                   <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-sin-particularidades" onclick="unselect(value, name)"/>Sin particularidades</label>
                   <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-idea-obsesiva" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Idea obsesiva</label>
                   <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-idea-fija" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Idea fija</label>
-                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-ideacion-delirante-sistematizada" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Ideación delirante
+                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-ideacion-delirante-sistematizada" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades,contenido-pensamiento-ideacion-delirante-no-sistematizada', name)"/>Ideación delirante
                     sistematizada</label>
-                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]"value="contenido-pensamiento-ideacion-delirante-no-sistematizada" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Ideación delirante no
+                  <label id="check"><input type="checkbox" name="contenido-pensamiento[]"value="contenido-pensamiento-ideacion-delirante-no-sistematizada" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades,contenido-pensamiento-ideacion-delirante-sistematizada', name)"/>Ideación delirante no
                     sistematizada</label>
                   <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-ideas-muerte" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Ideas de muerte</label>
                   <label id="check"><input type="checkbox" name="contenido-pensamiento[]" value="contenido-pensamiento-ideas-suicidas" onclick="unselectUnicos('contenido-pensamiento-sin-particularidades', name)"/>Ideas suicidas</label>
